codebox to IOBox spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,16 @@
   }
 }
 
-.split {
+#problem-description::-webkit-scrollbar {
+  width: 6px;
+}
+
+#problem-description::-webkit-scrollbar-thumb {
+  background: rgb(206, 206, 206);
+  border-radius: 10px;
+  box-shadow: -2px -2px 7px rgb(255, 255, 255);
+}
+
+#problem-description::-webkit-scrollbar-track {
+  background-color: transparent;
 }
